# panda3d-boilerplate

./: .gitignore  LICENSE  README.md  create-panda3d-project.sh  create.py  pyproject.toml
panda3d_boilerplate/: cli.py
panda3d_boilerplate/templates/: README.md  requirements.txt  run.bat
panda3d_boilerplate/templates/src/input/: input_manager.py
panda3d_boilerplate/templates/src/scenes/: base_scene.py
templates/: .gitignore  README.md  run.sh
templates/config/: config.prc
templates/src/: main.py
templates/src/scenes/: menu_scene.py
